terraform/azure/vm/vm.tf
resource "azurerm_linux_virtual_machine" "excalidraw_vm" {
  name                            = "excalidraw_vm"
  computer_name                   = "excalidrawvm"
  location                        = azurerm_resource_group.excalidraw_rg.location
  resource_group_name             = azurerm_resource_group.excalidraw_rg.name
  size                            = var.vm_size
  admin_username                  = var.admin_username
  disable_password_authentication = true
  network_interface_ids           = [azurerm_network_interface.excalidraw_nic.id]

  admin_ssh_key {
    username   = var.admin_username
    public_key = var.ssh_public_key
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = var.os_disk_type
    disk_size_gb         = var.os_disk_size_gb
  }

  source_image_reference {
    publisher = var.image_publisher
    offer     = var.image_offer
    sku       = var.image_sku
    version   = var.image_version
  }
}
